structure page: header, body, footer

--- a/mvc.html
+++ b/mvc.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title>◄organized►</title>
+<script>O=i=>typeof i == 'object' ? i : document.getElementById(i);</script>
 </head>
 <body>
 </body>
+<div id="page">
+ <div id="page-header"></div>
+ <div id="page-body"></div>
+ <div id="page-footer"></div>
+</div>
 </html>
