incorporate header generate process into mvc.html

--- a/mvc.html
+++ b/mvc.html
@@ -8,6 +8,7 @@
 </body>
 <div id="page">
  <div id="page-header"></div>
+ <script src="script/header.js"></script>
  <div id="page-body"></div>
  <div id="page-footer"></div>
 </div>
